--- a/client/blocks/reader-post-options-menu/style.scss
+++ b/client/blocks/reader-post-options-menu/style.scss
@@ -1,7 +1,7 @@
 .reader-post-options-menu,
 .reader-post-options-menu .ellipsis-menu {
 	.button.is-borderless {
-		color: var( --color-neutral );
+		color: var( --color-text-subtle );
 
 		&:hover,
 		&:active {
